[workspace]
members = ["orchestrator", "cosmos_gravity", "ethereum_gravity", "gravity_utils", "proto_build", "test_runner", "gravity_proto", "relayer", "gbt", "metrics_exporter"]
default-members = ["gbt"]


[patch.crates-io]
web30 = { git = "https://github.com/althea-net/web30", branch = "christianborst/uniswap-price-oracle-fix" }